k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dranapaula-web
  namespace: est-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dranapaula-web
  template:
    metadata:
      labels:
        app: dranapaula-web
    spec:
      containers:
      - name: dranapaula-web
        image: faelsouz/dranapaula-web:v1.0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
