k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: draanapaula-website
  namespace: draanapaula
spec:
  selector:
    app: draanapaula-website
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
